--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.5.7</version>
+        </dependency>
 
     </dependencies>
 
