--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
-          command: mvn -B -DskipTests clean package
-# Invoke jobs via workflows
+          command: mvn test clean package
+# Invoke jobs via workflows -B -DskipTests clean package
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   sample1: # This is the name of the workflow, feel free to change it to better match your workflow.
